--- a/vms/roles/vms/templates/vm.xml.j2
+++ b/vms/roles/vms/templates/vm.xml.j2
@@ -152,7 +152,7 @@
       <address type='pci' domain='0x0000' bus='0x03' slot='0x00' function='0x0'/>
     </controller>
     <interface type='network'>
-      <source network='hub'/>
+      <source network='{{ vmnet }}'/>
       <model type='virtio'/>
       <alias name='net0'/>
       <address type='pci' domain='0x0000' bus='0x01' slot='0x00' function='0x0'/>
