--- a/vms/roles/vms/templates/vm.xml.j2
+++ b/vms/roles/vms/templates/vm.xml.j2
@@ -41,7 +41,6 @@
       <backingStore/>
       <target dev='vda' bus='virtio'/>
       <boot order='1'/>
-      <alias name='virtio-disk0'/>
       <address type='pci' domain='0x0000' bus='0x04' slot='0x00' function='0x0'/>
     </disk>
     <disk type='file' device='cdrom'>
@@ -51,7 +50,6 @@
       <target dev='sda' bus='sata'/>
       <readonly/>
       <boot order='2'/>
-      <alias name='sata0-0-0'/>
       <address type='drive' controller='0' bus='0' target='0' unit='0'/>
     </disk>
     <controller type='usb' index='0' model='qemu-xhci' ports='15'>
@@ -172,9 +170,7 @@
       <alias name='serial0'/>
     </console>
     <channel type='unix'>
-      <source mode='bind' path='/run/libvirt/qemu/channel/80-hub/org.qemu.guest_agent.0'/>
-      <target type='virtio' name='org.qemu.guest_agent.0' state='connected'/>
-      <alias name='channel0'/>
+      <target type='virtio' name='org.qemu.guest_agent.0'/>
       <address type='virtio-serial' controller='0' bus='0' port='1'/>
     </channel>
     <input type='tablet' bus='usb'>
